--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,156 @@
+/* FONTS */
+@import url("https://fonts.googleapis.com/css2?family=Chewy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chewy&family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chewy&family=Oswald&family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chewy&family=Oswald&family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+
+.App::-webkit-scrollbar{
+  display: none;
+}
+.ubantu {
+  font-family: "Chewy", "cursive";
+  font-family: "Oswald", sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+.cursive {
+  font-family: 'Kalam', cursive;
+}
+.kalam{
+  font-family: 'Kalam', cursive;
+}
+.popins {
+  font-family: "Chewy", cursive;
+  font-family: "Poppins", sans-serif;
+}
+.sans {
+  font-family: "Noto Sans KR", sans-serif;
+}
+.sans2 {
+  font-family: "Julius Sans One", sans-serif;
+}
+.oswald {
+  font-family: "Chewy", cursive;
+  font-family: "Oswald", sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+/* TAILWIND  */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.linear-bg{
-    background-image: linear-gradient(to right, #9500b5, #5d228f, #322164, #171736, #000001);
+.logo {
+  font-family: "Chewy", cursive;
+  font-weight: 200;
 }
-.text-shadow{
-    text-shadow: 1px 3px  #7b0296;
+
+#li1 {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
+#li1:hover #ul {
+  display: block;
+}
+.text-shadow {
+  text-shadow: 0px 0px 5px rgb(192, 74, 74);
+}
+
+.text-style {
+  -webkit-backdrop-filter: opacity(0);
+  backdrop-filter: 100%;
+}
+select option:hover {
+  background-color: blueviolet;
+}
+.input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+}
+
 .bg{
-    background-image: linear-gradient(
-  0deg,
-  hsl(258deg 100% 16%) 0%,
-  hsl(262deg 100% 17%) 11%,
-  hsl(265deg 99% 18%) 24%,
-  hsl(268deg 99% 19%) 38%,
-  hsl(270deg 99% 20%) 52%,
-  hsl(273deg 99% 21%) 65%,
-  hsl(275deg 99% 22%) 77%,
-  hsl(277deg 99% 23%) 86%,
-  hsl(279deg 100% 24%) 94%,
-  hsl(281deg 100% 25%) 100%
-);
+  background-image: url("./assets//petAndOwner.jpg");
+   background-size: cover;
+   background-repeat: no-repeat;
+   text-shadow:0px 0px 1px #555;
 }
-.nav{background-image: linear-gradient(
-  180deg,
-  hsl(244deg 49% 14%) 4%,
-  hsl(244deg 49% 14%) 100%
-);
-    
+input:focus {
+  border: 3px solid #555;
 }
-.bg{
-    background-image: linear-gradient(
-  55deg,
-  hsl(242deg 29% 17%) 0%,
-  hsl(242deg 29% 17%) 28%,
-  hsl(242deg 29% 17%) 45%,
-  hsl(242deg 29% 17%) 55%,
-  hsl(242deg 29% 17%) 62%,
-  hsl(242deg 29% 17%) 67%,
-  hsl(242deg 29% 17%) 73%,
-  hsl(242deg 29% 17%) 79%,
-  hsl(242deg 29% 17%) 85%,
-  hsl(242deg 29% 17%) 92%,
-  hsl(242deg 29% 17%) 100%
-);
+select:focus {
+  border: 3px solid #555;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
-.animate{
-  background-color: rgb(22, 223, 32);
-animation:my 3s 1  linear;}
-@keyframes my {
-  0%{width: 0px;}
-  10%{width: 20px;}
-  20%{width: 30px;}
-  30%{width: 40px;}
-  40%{width: 50px;}
-  50%{width: 60px;}
-  60%{width: 70px;}
-  70%{width: 80px;}
-  80%{width: 90px;}
-  90%{width: 100px;}
-  99%{width:fit-content;}
+
+.max-content {
+  width: max-content;
 }
-#menu{display: none;}
-#container:hover  #menu {
-  display: inline-block;
+.hide-scroll::-webkit-scrollbar{
+  display: none;
+
 }
+.hide-scroll{
+  box-shadow : 0px  0px 1px gray inset;
+}
+
+/* meida */
+@media only screen and (max-width: 537px) {
+  .mobile {
+    flex-direction: column;
+  }
+  .first-con-img {
+    display: none;
+  }
+}
+@media only screen and (max-width: 744px) {
+  .mobile {
+    flex-direction: column;
+  }
+  .pet-card {
+    width: 100px;
+  }
+}
+@media only screen and (max-width: 681px) {
+  .btn-con {
+    position: absolute;
+    right: 10px;
+    top: 3.7rem;
+  }
+}
+@media only screen and (min-width: 681px) {
+  .icon {
+    display: none;
+  }
+}
+@media only screen and (max-width: 614px) {
+  .first-con-span {
+    font-size: 12px;
+  }
+  .first-con {
+    display: flex;
+    flex-direction: column;
+  }
+  .first-con-li {
+    padding-left: 10px;
+    width: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+    padding-right: 10px;
+  }
+  .available {
+    font-size: 34px;
+  }
+}
+
